Atualizando o css e novas paginas

--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -16,10 +16,40 @@
             <li class="active">Inícial</li>
             <li><a href="pag2.html">Simulador</a></li>
             <li>|</li>
-            <li>Login</li>
+            <li><a href="login.html">Login</a></li>
             <li>Cadastro</li>
         </ul>
     </div>
+</div>
+<div class="banner">
+    <p class="message">
+        Preservando <span>hoje</span> para existirem <span>amanhã.</span>
+    </p>
+</div>
+<div class="proposito">
+    <div class="conteiner">
+        <h2>Nosso Propósito</h2>
+        <div class="mvv">
+            <div>
+                <img src="/img/missao.png">
+                <h3>Missão</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div>
+                <img src="/img/visao-compartilhada.png">
+                <h3>Visão</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div>
+                <img src="/img/valor.png">
+                <h3>Valores</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <p>Feito com amor por um aluno BandTec © 2021</p>
 </div>
 
 </body>
