--- a/site-institucional/pag2.html
+++ b/site-institucional/pag2.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simulador</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>PAGINA 2!</h2>
-    <a href="index.html">VOLTAR</a>
+    <div class="header">
+    <div class="conteiner">
+        <h1>AquaTec</h1>
+            <ul class="navbar">
+            <li class="active">Inícial</li>
+            <li><a href="pag2.html">Simulador</a></li>
+            <li>|</li>
+            <li>Login</li>
+            <li>Cadastro</li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
