Adicionando pagina de cadastro ao site

--- a/site-institucional/cadastro.html
+++ b/site-institucional/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,23 +16,31 @@
                 <li><a href="index.html">Inícial</a></li>
                 <li><a href="pag2.html">Simulador</a></li>
                 <li>|</li>
-                <li class="active">Login</li>
-                <li><a href="cadastro.html">Cadastro</a></li>
+                <li><a href="login.html">Login</a></li>
+                <li class="active">Cadastro</li>
             </ul>
         </div>
     </div>
     <div class="banner">
-        <div class="formLogin">
-            <h2>Seja bem-vindo!</h2>
+        <div class="formCadastro">
+            <h2>Registrar</h2>
             <div>
-                <span>Email:</span> 
-                <input type="email" placeholder=" Insira o e-mail para login">
+                <span>Insira seu email:</span>
+                <input type="email" placeholder="Digite seu email">
             </div>
             <div>
-                <span>Senha:</span> 
-                <input type="password" placeholder=" * * * * * * *">
+                <span>Confirme seu email:</span>
+                <input type="email" placeholder="Digite seu email novamente">
             </div>
-            <button>Entrar</button>
+            <div>
+                <span>Defina sua senha:</span>
+                <input type="password" placeholder="Digite sua senha">
+            </div>
+            <div>
+                <span>Confirme sua senha:</span>
+                <input type="password" placeholder="Digite sua senha novamente">
+            </div>
+            <button>Criar Conta</button>
         </div>
     </div>
     <div class="footer">
