--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -11,13 +11,14 @@
 
 <div class="header">
     <div class="conteiner">
+        <div class="logo"><img src="img/jellyfish.png"></div>
         <h1>AquaTec</h1>
             <ul class="navbar">
             <li class="active">Inícial</li>
             <li><a href="pag2.html">Simulador</a></li>
             <li>|</li>
             <li><a href="login.html">Login</a></li>
-            <li>Cadastro</li>
+            <li><a href="cadastro.html">Cadastro</a></li>
         </ul>
     </div>
 </div>
@@ -31,17 +32,17 @@
         <h2>Nosso Propósito</h2>
         <div class="mvv">
             <div>
-                <img src="/img/missao.png">
+                <img src="img/missao.png">
                 <h3>Missão</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div>
-                <img src="/img/visao-compartilhada.png">
+                <img src="img/visao-compartilhada.png">
                 <h3>Visão</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div>
-                <img src="/img/valor.png">
+                <img src="img/valor.png">
                 <h3>Valores</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
