--- a/site-institucional/pag2.html
+++ b/site-institucional/pag2.html
@@ -10,13 +10,14 @@
 <body>
     <div class="header">
     <div class="conteiner">
+        <div class="logo"><img src="img/jellyfish.png"></div>
         <h1>AquaTec</h1>
             <ul class="navbar">
-            <li class="active">Inícial</li>
-            <li><a href="pag2.html">Simulador</a></li>
+            <li><a href="index.html">Inícial</a></li>
+            <li class="active"><a href="pag2.html">Simulador</a></li>
             <li>|</li>
-            <li>Login</li>
-            <li>Cadastro</li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="cadastro.html">Cadastro</a></li>
         </ul>
     </div>
 </div>
